// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: fix 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="fix"
    tabs={
      Array [
        Object {
          "descriptionSections": Array [],
          "key": "code",
          "label": "hotspots.tabs.code",
        },
        Object {
          "descriptionSections": Array [
            Object {
              "content": "cause",
              "key": "root_cause",
            },
          ],
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        Object {
          "descriptionSections": Array [
            Object {
              "content": "assess",
              "key": "assess_the_problem",
            },
          ],
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        Object {
          "descriptionSections": Array [
            Object {
              "content": "how",
              "key": "how_to_fix",
            },
          ],
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
      ]
    }
  />
  <div
    className="bordered huge-spacer-bottom"
  >
    <div
      className="markdown big-padded"
      dangerouslySetInnerHTML={
        Object {
          "__html": "how",
        }
      }
      key="fix"
    />
  </div>
</Fragment>
`;

exports[`should render correctly: risk 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="code"
    tabs={
      Array [
        Object {
          "descriptionSections": Array [],
          "key": "code",
          "label": "hotspots.tabs.code",
        },
        Object {
          "descriptionSections": Array [
            Object {
              "content": "cause",
              "key": "root_cause",
            },
          ],
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        Object {
          "descriptionSections": Array [
            Object {
              "content": "assess",
              "key": "assess_the_problem",
            },
          ],
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        Object {
          "descriptionSections": Array [
            Object {
              "content": "how",
              "key": "how_to_fix",
            },
          ],
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
      ]
    }
  />
  <div
    className="bordered huge-spacer-bottom"
  >
    <div
      className="padded"
    >
      <div>
        CodeTabContent
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly: vulnerability 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="vulnerability"
    tabs={
      Array [
        Object {
          "descriptionSections": Array [],
          "key": "code",
          "label": "hotspots.tabs.code",
        },
        Object {
          "descriptionSections": Array [
            Object {
              "content": "cause",
              "key": "root_cause",
            },
          ],
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        Object {
          "descriptionSections": Array [
            Object {
              "content": "assess",
              "key": "assess_the_problem",
            },
          ],
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        Object {
          "descriptionSections": Array [
            Object {
              "content": "how",
              "key": "how_to_fix",
            },
          ],
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
      ]
    }
  />
  <div
    className="bordered huge-spacer-bottom"
  >
    <div
      className="markdown big-padded"
      dangerouslySetInnerHTML={
        Object {
          "__html": "assess",
        }
      }
      key="vulnerability"
    />
  </div>
</Fragment>
`;

exports[`should render correctly: with comments or changelog element 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="code"
    tabs={
      Array [
        Object {
          "descriptionSections": Array [],
          "key": "code",
          "label": "hotspots.tabs.code",
        },
        Object {
          "descriptionSections": Array [
            Object {
              "content": "cause",
              "key": "root_cause",
            },
          ],
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        Object {
          "descriptionSections": Array [
            Object {
              "content": "assess",
              "key": "assess_the_problem",
            },
          ],
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        Object {
          "descriptionSections": Array [
            Object {
              "content": "how",
              "key": "how_to_fix",
            },
          ],
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
      ]
    }
  />
  <div
    className="bordered huge-spacer-bottom"
  >
    <div
      className="padded"
    >
      <div>
        CodeTabContent
      </div>
    </div>
  </div>
</Fragment>
`;
